# SCLang

./: CMakeLists.txt
include/error/: error.h
include/lexer/: lexer.h  tokens.h
include/util/: arena.h  bool.h  fileio.h  string.h  view.h
src/: main.c
src/error/: error.c
src/lexer/: lexer.c  tokens.c
src/util/: arena.c  fileio.c  string.c  view.c
